...
}

class _MerchantItemCellState extends State<MerchantItemCell> {
  @override
  Widget build(BuildContext context) {
    final deleteItemButton = InkWell(
        key: const Key('delete_item_key'),
        child: Container(
          child: const Icon(
            Icons.delete,
            size: 25.0,
          ),
        ),
        onTap: () {
          widget.removeItem(widget.item);
        });
    final editItemButton = InkWell(
        key: const Key('edit_item_key'),
        child: Container(
          child: const Icon(
            Icons.edit,
            size: 25.0,
          ),
        ),
...
