...
                Navigator.of(context).pushNamed(AppRoutes.cart);
              },
              icon: const Icon(Icons.shopping_cart),
              padding: const EdgeInsets.only(right: 15)),
          IconButton(
              tooltip: 'Enter the Login page',
              key: const Key("home_login_button"),
              onPressed: () {
                Navigator.of(context).pushNamed(AppRoutes.login);
              },
              icon: const Icon(Icons.login),
              padding: const EdgeInsets.only(right: 15)),
          IconButton(
...
