...
          backgroundColor: Colors.white,
          body: Center(
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: <Widget>[
                const Text(
                  "Please login to access your profile!",
                  style: TextStyle(fontSize: 18),
                ),
                Container(
                  margin: const EdgeInsets.only(top: 10.0),
                  child: ElevatedButton(
                    key: const Key("profile_login_button"),
...
              ],
            ),
          ));
    }

    final barActionIconButton = IconButton(
        key: const Key("order_search_button"),
        icon: barActionIcon,
        onPressed: () {
          setState(() {
            if (barActionIcon.icon == Icons.search) {
              barActionIcon = const Icon(Icons.cancel);
              customSearchBar = ListTile(
                  leading: const Icon(
                    Icons.search,
                    color: Colors.black,
                    size: 28,
                  ),
                  title: TextFormField(
                    key: const Key("order_search_textform"),
                    inputFormatters: [
                      LengthLimitingTextInputFormatter(30),
                    ],
                    controller: searchText,
                    onChanged: (val) {
                      setState(() {});
...
              validator: (value) {
                if (value == null || value.isEmpty) {
                  return 'Please enter something';
                }
                return null;
              },
              key: const Key('default_street_field'),
              inputFormatters: [LengthLimitingTextInputFormatter(16)],
              controller: streetAddress,
              enabled: _isEditEnabled,
              decoration: InputDecoration(
                  border: InputBorder.none, hintText: 'Street Address'),
            ),
...
